# AI-Trip-Planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env_utils.py  my_llm.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
nginx/: nginx.conf
prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_cache.py  test_schemas.py
trip_planner/: amap_client.py  background.py  cache.py  config.py  database.py  dependencies.py  index.html  main.py  metrics.py  models.py  prompts.py  schemas.py  trip_planner_agent.py  worker.py
trip_planner/routers/: __init__.py  feedback.py  trip.py
