[project]
name = "ai-trip-planner"
version = "0.2.0"
description = "AI Trip Planner — DeepSeek-V4-Flash + Amap + FastAPI"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
